# claude-as-api

./: CLAUDE.md  README.md  main.py  pyproject.toml
claude_proxy/: app.py  claude_runner.py  config.py  prompt_builder.py  schema_normalizer.py  schemas.py  stream_translator.py  tools_bridge.py
tests/: test_prompt_builder.py  test_schema_normalizer.py  test_tools_bridge.py
